--- a/TranspoLink/Views/Shared/_Layout.cshtml
+++ b/TranspoLink/Views/Shared/_Layout.cshtml
@@ -106,6 +106,7 @@
                     <div class="nav-dropdown-content" id="navUserContent">
                         <a href="/Admin/Admins">🛡️ Admins</a>
                         <a href="/Admin/Members">👥 Members</a>
+                        <a href="/RouteNTrip/Drivers">👨‍✈️ Drivers List</a>
                     </div>
                 </li>
                 <li class="nav-item-dropdown" onclick="toggleNavDropdown(event, 'navOpsContent')">
@@ -115,7 +116,7 @@
                     <div class="nav-dropdown-content" id="navOpsContent">
                         <a href="/RouteNTrip/Routes">🗺️ Routes</a>
                         <a href="/Vehicle/Vehicles">🚌 Vehicles</a>
-                        <a href="/RouteNTrip/Trips">🎫 Trips</a>
+                        <a href="/RouteNTrip/Trips">🎫 Trips Management</a>
                         <a href="/Admin/Bookings">📋 Bookings</a>
                     </div>
                 </li>
