--- a/TranspoLink/Views/Shared/_Layout.cshtml
+++ b/TranspoLink/Views/Shared/_Layout.cshtml
@@ -116,7 +116,7 @@
                     <div class="nav-dropdown-content" id="navOpsContent">
                         <a href="/RouteNTrip/Routes">🗺️ Routes</a>
                         <a href="/Vehicle/Vehicles">🚌 Vehicles</a>
-                        <a href="/RouteNTrip/Trips">🎫 Trips Management</a>
+                        <a href="/RouteNTrip/Trips">🎫 Trips</a>
                         <a href="/Admin/Bookings">📋 Bookings</a>
                     </div>
                 </li>
